# django-reactify

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
reactify/: apps.py  package-lock.json  package.json  urls.py  views.py  webpack.config.js
reactify/management/commands/: reactify.py  reactify_app.py
reactify/react/: index.js
reactify/react/components/: App.js
reactify/react/redux/: store.js
reactify/react/redux/actions/: api.js  types.js
reactify/react/redux/reducers/: index.js
reactify/templates/: base.html
reactify/templates/reactify/: index.html
