[metadata]
name = django-reactify
version = 0.1
description = A package to reactify Django app.
long_description = file: README.rst
# url = https://www.e  xample.com/
author = Bonifase Orwa
author_email = orwabonifase@gmail.com
keywords = django reactjs
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.1  # Replace "X.Y" as appropriate