[metadata]
name = django-reactify
version = 1.3.0
description = A package to reactify Django app.
long_description = file: README.rst
url = https://github.com/Bonifase/django-reactify
author = Bonifase Orwa
author_email = orwabonifase@gmail.com
keywords = django reactjs
zip_safe = false
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=2.2